Update environment configuration, enhance README, and refactor backend services. Changed default DB credentials in `.env.example`, added new API endpoints for form automation, and improved error handling in various services. Removed deprecated scripts and updated documentation for unified service setup.

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -107,6 +107,8 @@
 
   <div id="mainSection" class="hidden">
     <div id="status" class="status info hidden"></div>
+    <button id="autoApply" style="background-color: #10b981; font-weight: 600;">Auto Apply (Supervised)</button>
+    <button id="demoAutoApply" style="background-color: #0ea5e9; font-weight: 600;">Demo Auto Apply (No Backend)</button>
     <button id="fillForm">Fill Application Form</button>
     <button id="analyzePage">Analyze Job Page</button>
     <button id="logoutBtn" style="background-color: #ef4444; margin-top: 8px;">Sign Out</button>
